Fix horizontal scroll bug

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -17,8 +17,9 @@
   padding: 0;
   margin: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow-y: scroll;
+  overflow-x: hidden;
   background-image: linear-gradient(100deg, #324d91, #9cab9a);
   background-size: 100% 100%;
 }
